# INTERFACES
add_subdirectory(stb)
add_subdirectory(rapidjson)
add_subdirectory(fast_float)
add_subdirectory(utf8)
add_subdirectory(nanosvg)
add_subdirectory(bencode)
add_subdirectory(ska_hash_map)
add_subdirectory(posix)

# STATIC LIBRARIES
add_subdirectory(eastl)
add_subdirectory(fmt)
add_subdirectory(meshoptimizer)
add_subdirectory(mimalloc)
add_subdirectory(enet)
add_subdirectory(uuidv7)
add_subdirectory(cpu_features)
add_subdirectory(jsonsl)
add_subdirectory(uriparser)
add_subdirectory(ozz)
add_subdirectory(freetype)
add_subdirectory(jsoncpp)



